# pointcloud_examples

./: .gitignore
Extract_indices/: CMakeLists.txt
Filters/Extract_indices/src/: extract_indices.cpp
Filters/Project_points_using_parametric_model/src/: project_inliers.cpp
Filters/Removing_outlier/: CMakeLists.txt
Filters/Removing_outlier/src/: remove_outliers.cpp
Filters/Statistical_Outlier_Removal_Filter/src/: statistical_removal.cpp
Filters/VoxelGrid_filter/: CMakeLists.txt
Filters/VoxelGrid_filter/src/: voxel_grid.cpp
PassThrough_filter/: CMakeLists.txt
PassThrough_filter/src/: passthroughfilter.cpp
Project_points_using_parametric_model/: CMakeLists.txt
Removing_outlier/: CMakeLists.txt
Removing_outlier/src/: remove_outliers.cpp
Statistical_Outlier_Removal_Filter/: CMakeLists.txt
